[workspace]
members = ["enx_tao_ffi", "enx_tao_ffi_build"]
resolver = "3"

[workspace.package]
authors = ["TheKeyblader"]
edition = "2024"
license = "MIT"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
tao = "0.35.0"
interoptopus = "=0.16.0-alpha.16"
interoptopus_csharp = "=0.16.0-alpha.16"
